[Fix] edit z-index values menu

--- a/_sass/_Components/menu-icon.scss
+++ b/_sass/_Components/menu-icon.scss
@@ -53,7 +53,7 @@ $overlay-size--px: $overlay-size * 16px;
   position: absolute;
   top: 60%;
   right: 50%;
-  z-index: 2;
+  z-index: 99;
   width: $overlay-size--em;
   height: $overlay-size--em;
   max-width: $overlay-size--px;
@@ -68,7 +68,7 @@ $overlay-size--px: $overlay-size * 16px;
 
 .menu-icon {
   position: relative;
-  z-index: 4;
+  z-index: 100;
   display: block;
   width: $menu-icon-size--em;
   height: $menu-icon-size--em;
