--- a/_sass/_Objects/nav.scss
+++ b/_sass/_Objects/nav.scss
@@ -4,7 +4,7 @@
   // top: 50%;
   top: 0;
   left: 0;
-  z-index: 50;
+  z-index: 101;
   width: 100%;
   // height: 70%;
   height: 70vh;
